# LeanMech

./: .gitignore  MACBOOK_MIGRATION_AUDIT_20260419.md  PipelineLeanArtifacts.lean  README.md  lakefile.toml  pyproject.toml
configs/: api_deepseek_chat.yaml  api_openai_proxy_gpt52.yaml  api_qwen_vl_plus.yaml  competition_ch1_q10_single_proxy_gpt54_20260404.yaml  default_mechanics73_openai.yaml  direct_baseline_mechanics101_gpt54_20260410.yaml  full_run_openai_proxy_lean.yaml  mechanics101_proxy_gpt54_20260409.yaml  mechanics20_single_proxy_gpt54_20260404.yaml  mechanics73_plus3_openai_gpt54.yaml  mechanics73_plus3_proxy_gpt54.yaml  mechanics73_plus3_proxy_gpt54_seed2026033001.yaml  mvp_lean4phys_mechanics.yaml  mvp_local_image.yaml  mvp_local_text.yaml  mvp_phyx.yaml  smoke_mock_local_text.yaml  theoretical_mechanics_14_proxy_gpt54_20260407.yaml  tmp_lean4phys_random10_gpt54.yaml  tmp_mechanics73_mock.yaml  tmp_mechanics73_openai.yaml  tmp_one_pretty_openai.yaml
fixtures/: bench_competition_ch1_q10_single_20260404.json  bench_mechanics20_single_20260404.json  bench_mechanics73_plus3_seed20260330.json  bench_mechanics73_plus3_seed2026033001.json  bench_theoretical_mechanics_14_20260407.json
prompts/: A_extract_ir.txt  B_generate_statements.txt  B_revise_statements.txt  D_semantic_rank.txt  E_generate_proof.txt  E_plan_proof.txt  E_repair_proof.txt  Z_direct_formalize.txt
reports/: COMPETITION_CH1_Q10_NO_FALLBACK_FIX_20260404.md  COMPETITION_CH1_Q10_SINGLE_RETEST_20260404.md  CONCURRENCY_BENCHMARK_20260331.md  FEWSHOT_SAMPLE_DESIGN_20260412.md  (+14 more)
tests/: conftest.py  (+18 more)
(+63 files in other folders)
